[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptflow-tool"
version = "0.1.0"
description = "PromptFlow reasoning plan utility"
authors = [{name = "PromptFlow"}]
requires-python = ">=3.9"
dependencies = [
  "pydantic>=1.10",
  "typer>=0.9",
  "pyyaml>=6.0"
]

[tool.setuptools]
packages = ["promptflow_tool"]
package-dir = {"" = "src"}

[project.scripts]
promptflow = "promptflow_tool.cli:app"
