[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptkit"
version = "0.0.1"
description = "Explain-first prompt iteration toolkit (MVP)"
authors = [{name = "PromptKit"}]
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
  "typer>=0.9",
]

[tool.setuptools]
packages = ["promptkit"]
package-dir = {"" = "src"}

[project.scripts]
promptkit = "promptkit.cli:app"
